# echora

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: build-tauri.yml
backend/: Cargo.toml
backend/migrations/: 20250101000000_initial.sql  20250102000000_channel_crud.sql  20250103000000_message_edit.sql  20250104000000_replies_and_reactions.sql  20250106000000_add_link_previews.sql  20250107000000_roles_and_moderation.sql  20250108000000_uuid_columns.sql  20250109000000_composite_message_index.sql  20250110000000_attachments.sql  20250111000000_case_insensitive_username.sql  20250112000000_custom_emojis.sql  20250113000000_user_passkeys.sql  20250114000000_user_profiles.sql  20250115000000_drop_author_username.sql  20250116000000_soundboard.sql
backend/src/: admin_routes.rs  auth.rs  auth_routes.rs  database.rs  link_preview.rs  main.rs  models.rs  passkey_routes.rs  permissions.rs  routes.rs  storage.rs  voice.rs  websocket.rs
backend/src/admin/: invites.rs  mod.rs  moderation.rs  modlog.rs  settings.rs  users.rs
backend/src/routes/: attachments.rs  channels.rs  custom_emojis.rs  init.rs  messages.rs  mod.rs  proxy.rs  soundboard.rs
backend/src/services/: message.rs
backend/src/sfu/: codec.rs  mod.rs  models.rs  routes.rs  service.rs
backend/src/shared/: db.rs  error.rs  http.rs  mod.rs  password.rs  validation.rs
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs  ptt.rs  ptt_windows.rs
frontend/src/lib/: api.ts  audioSettings.ts  auth.ts  config.ts  emoji-data.ts  markdown.ts  mediasoup.ts  passkey.ts  ptt.ts  serverManager.ts  soundboardAudio.ts  sounds.ts  utils.ts  voice.ts  (+1 more)
frontend/static/: debug-audio.html  test-voice.html
scripts/: pre-commit
todos/: av1-codec-support.md  file-uploads.md  media-bot.md  one-click-deploy.md  soundboard.md  tauri-multi-server.md  tauri-native-audio-controls.md  tauri-push-to-talk.md  tauri-screen-sharing.md
(+47 files in other folders)
