[package]
name = "backend"
version = "0.2.4"
edition = "2024"

[dependencies]
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
axum = { version = "0", features = ["ws"] }
axum-extra = { version = "0", features = ["typed-header"] }
bytes = "1"
chrono = { version = "0", features = ["serde"] }
dashmap = "6"
dotenvy = "0"
futures-util = "0"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9"
linkify = "0.10"
mediasoup = "0.20"
mediasoup-types = "0.2"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
sqlx = { version = "0", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0"
tokio-tungstenite = "0"
tower = "0"
tower-http = { version = "0", features = ["cors", "fs"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
