[package]
name = "backend"
version = "0.2.10"
edition = "2024"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
axum = { version = "0.8", features = ["ws", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
dotenvy = "0.15"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9"
linkify = "0.10"
mediasoup = "0.20"
mediasoup-types = "0.2"
rand = "0.9"
reqwest = { version = "0.13", features = ["json", "stream"] }
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
object_store = { version = "0.13", features = ["aws", "fs"] }
bytes = "1"
mime_guess = "2"
